<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/BG">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/toolbar">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="25sp"
        app:srcCompat="@drawable/profile" />
    <TextView
        android:id="@+id/Numb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_bold"
        android:text="ID: "
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/numbid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="3dp"
        android:layout_toEndOf="@+id/Numb"
        android:layout_toRightOf="@id/Numb"
        android:layout_marginTop="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_bold"
        android:textSize="24dp"
        android:text="@string/NumbID" />
    <TextView
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Numb"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/Surname"
        android:textSize="18dp"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/surname"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/Name"
        android:textSize="18dp"/>
    <TextView
        android:id="@+id/lstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/LastName"
        android:textSize="18dp"/>


    <TextView
        android:id="@+id/surnameval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Numb"
        android:layout_marginLeft="3sp"
        android:layout_marginTop="20sp"
        android:layout_toRightOf="@id/surname"
        android:fontFamily="@font/inter"
        android:text="@string/surnameval"
        android:textColor="@color/white"
        android:textSize="18dp" />
    <TextView
        android:id="@+id/nameval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surnameval"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="3sp"
        android:layout_toRightOf="@id/name"
        android:textColor="@color/white"
        android:fontFamily="@font/inter"
        android:text="@string/nameval"

        android:textSize="18dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameval"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="3sp"
        android:layout_toRightOf="@id/lstname"
        android:textColor="@color/white"
        android:fontFamily="@font/inter"
        android:text="@string/lstname"
        android:textSize="18sp"
        />



</RelativeLayout>
    <Button
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30sp"
        android:layout_marginLeft="20sp"
        android:background="@drawable/outbutton"
        android:text="Выйти"
        android:fontFamily="@font/inter_semibold"
        android:textSize="18dp"
        android:textColor="@color/white"/>


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ElementsColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/arrow"
            android:layout_marginLeft="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Профиль"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/inter_semibold"
            android:layout_toRightOf="@id/arrow"
            android:layout_marginLeft="20dp"

            />


    </android.support.v7.widget.Toolbar>




</RelativeLayout>